--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type="text" placeholder="Email or JAMB Reg" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
         <input type="password" placeholder="Password" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
         <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
-          <a href="./inProgress.html">Login</a>
+          <a href="./Progress.html">Login</a>
         </button>
       </form>
       <button id="closeLogin" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-xl">&times;</button>
@@ -138,7 +138,7 @@
     <div class="grid md:grid-cols-4 gap-8">
       <!-- School Gate -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden">
-        <img src="./Images/School gate 2.png" alt="School Gate Area" class="w-full h-48 object-cover">
+        <img src="./School gate 2.png" alt="School Gate Area" class="w-full h-48 object-cover">
         <div class="p-6">
           <h3 class="text-xl font-bold text-gray-800 mb-2">School Gate</h3>
           <p class="text-gray-600 mb-4">Hostels close to university entrance for quick access to campus.</p>
@@ -148,7 +148,7 @@
 
       <!-- Satellite Gate -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden">
-        <img src="./Images/Satellite pic.png" alt="Satellite Gate Area" class="w-full h-48 object-cover">
+        <img src="./Satellite pic.png" alt="Satellite Gate Area" class="w-full h-48 object-cover">
         <div class="p-6">
           <h3 class="text-xl font-bold text-gray-800 mb-2">Satellite Gate</h3>
           <p class="text-gray-600 mb-4">Peaceful environment with affordable hostels and easy transport.</p>
@@ -158,7 +158,7 @@
 
       <!-- Iworoko -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden">
-        <img src="./Images/Iworoko pics.png" alt="Iworoko Area" class="w-full h-48 object-cover">
+        <img src="./Iworoko pics.png" alt="Iworoko Area" class="w-full h-48 object-cover">
         <div class="p-6">
           <h3 class="text-xl font-bold text-gray-800 mb-2">Iworoko</h3>
           <p class="text-gray-600 mb-4">Student-friendly area with cheaper hostels and food options.</p>
@@ -168,7 +168,7 @@
 
       <!-- Phase Two -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden">
-        <img src="./Images/Phase 2 pic.png" alt="Phase Two Area" class="w-full h-48 object-cover">
+        <img src="./Phase 2 pic.png" alt="Phase Two Area" class="w-full h-48 object-cover">
         <div class="p-6">
           <h3 class="text-xl font-bold text-gray-800 mb-2">Phase Two</h3>
           <p class="text-gray-600 mb-4">Modern hostels with top-notch facilities and close amenities.</p>
@@ -194,24 +194,24 @@
 <script>
   const hostels = {
     schoolgate: [
-      { name: "Elite Hostel", price: "₦250,000/year — 5 min walk to campus", img: "./Images/School gate 2.png" },
-      { name: "Comfort Villa", price: "₦200,000/year — Free Wi-Fi and water", img: "./Images/School gate 2.png" },
-      { name: "Prime Lodge", price: "₦300,000/year — Close to mini mart", img: "./Images/School gate 2.png" }
+      { name: "Elite Hostel", price: "₦250,000/year — 5 min walk to campus", img: "./School gate 2.png" },
+      { name: "Comfort Villa", price: "₦200,000/year — Free Wi-Fi and water", img: "./School gate 2.png" },
+      { name: "Prime Lodge", price: "₦300,000/year — Close to mini mart", img: "./School gate 2.png" }
     ],
     satellite: [
-      { name: "Harmony Lodge", price: "₦220,000/year — 24/7 Power Supply", img: "./Images/Satellite pic.png" },
-      { name: "Satellite Suites", price: "₦280,000/year — Spacious and clean rooms", img: "./Images/Satellite pic.png" },
-      { name: "Peace Court", price: "₦230,000/year — Security guaranteed", img: "./Images/Satellite pic.png" }
+      { name: "Harmony Lodge", price: "₦220,000/year — 24/7 Power Supply", img: "./Satellite pic.png" },
+      { name: "Satellite Suites", price: "₦280,000/year — Spacious and clean rooms", img: "./Satellite pic.png" },
+      { name: "Peace Court", price: "₦230,000/year — Security guaranteed", img: "./Satellite pic.png" }
     ],
     iworoko: [
-      { name: "Victory Hostel", price: "₦180,000/year — Budget-friendly", img: "./Images/Iworoko pics.png" },
-      { name: "Student Villa", price: "₦190,000/year — Close to local markets", img: "./Images/Iworoko pics.png" },
-      { name: "Golden Stay", price: "₦200,000/year — Constant water & Wi-Fi", img: "./Images/Iworoko pics.png" }
+      { name: "Victory Hostel", price: "₦180,000/year — Budget-friendly", img: "./Iworoko pics.png" },
+      { name: "Student Villa", price: "₦190,000/year — Close to local markets", img: "./Iworoko pics.png" },
+      { name: "Golden Stay", price: "₦200,000/year — Constant water & Wi-Fi", img: "./Iworoko pics.png" }
     ],
     phase2: [
-      { name: "Luxury Haven", price: "₦350,000/year — Premium furnished rooms", img: "./Images/Phase 2 pic.png" },
-      { name: "Prime Villa", price: "₦340,000/year — Water & 24hr Power", img: "./Images/Phase 2 pic.png" },
-      { name: "Serene Lodge", price: "₦320,000/year — CCTV & Security Guard", img: "./Images/Phase 2 pic.png" }
+      { name: "Luxury Haven", price: "₦350,000/year — Premium furnished rooms", img: "./Phase 2 pic.png" },
+      { name: "Prime Villa", price: "₦340,000/year — Water & 24hr Power", img: "./Phase 2 pic.png" },
+      { name: "Serene Lodge", price: "₦320,000/year — CCTV & Security Guard", img: "./Phase 2 pic.png" }
     ]
   };
 
@@ -248,7 +248,7 @@
   <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
     <!-- SCHOOL GATE -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="./Images\download.jpg" alt="School Gate" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=School+Gate'">
+      <img src=".\download.jpg" alt="School Gate" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=School+Gate'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">School Gate</h3>
         <p class="text-gray-600 mt-2">Hostels close to the main campus gate with easy transport access.</p>
@@ -258,7 +258,7 @@
 
     <!-- SATELLITE GATE -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="./Images/Satellite pic.png" alt="Satellite Gate" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Satellite+Gate'">
+      <img src="./Satellite pic.png" alt="Satellite Gate" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Satellite+Gate'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Satellite Gate</h3>
         <p class="text-gray-600 mt-2">Modern lodges with reliable light and water supply.</p>
@@ -268,7 +268,7 @@
 
     <!-- IWOROKO -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="./Images/Iworoko pics.png" alt="Iworoko" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Iworoko'">
+      <img src="./Iworoko pics.png" alt="Iworoko" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Iworoko'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Iworoko</h3>
         <p class="text-gray-600 mt-2">Affordable hostels close to local shops and transport links.</p>
@@ -278,7 +278,7 @@
 
     <!-- PHASE TWO -->
     <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition overflow-hidden">
-      <img src="./Images/Phase 2 pic.png" alt="Phase Two" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Phase+Two'">
+      <img src="./Phase 2 pic.png" alt="Phase Two" class="w-full h-48 object-cover" onerror="this.onerror=null;this.src='https://placehold.co/800x480/cccccc/444444?text=Phase+Two'">
       <div class="p-5">
         <h3 class="text-2xl font-semibold text-gray-800">Phase Two</h3>
         <p class="text-gray-600 mt-2">Peaceful area with clean, secure shared apartments.</p>
@@ -331,20 +331,20 @@
   // Hostels data: images point to local images/hostelX.jpg (you must upload them)
   const hostelData = {
     schoolGate: [
-      { name: "Grace Villa", price: "₦180,000 / year", VideoFrame: "./Images/School Gate.mp4" },
-      { name: "Peace Lodge", price: "₦200,000 / year", image: "./Images/School Gate.mp4" }
+      { name: "Grace Villa", price: "₦180,000 / year", VideoFrame: "./School Gate.mp4" },
+      { name: "Peace Lodge", price: "₦200,000 / year", image: "./School Gate.mp4" }
     ],
     satelliteGate: [
-      { name: "Royal Suites", price: "₦250,000 / year", image: "./Images/Satellite pic.png" },
-      { name: "Comfort Villa", price: "₦230,000 / year", image: "./Images/Satellite pic.png" }
+      { name: "Royal Suites", price: "₦250,000 / year", image: "./Satellite pic.png" },
+      { name: "Comfort Villa", price: "₦230,000 / year", image: "./Satellite pic.png" }
     ],
     iworoko: [
-      { name: "Victory Lodge", price: "₦150,000 / year", image: "./Images/Iworoko main.mp4" },
-      { name: "Divine Hostel", price: "₦170,000 / year", image: "./Images/Iworoko main.mp4" }
+      { name: "Victory Lodge", price: "₦150,000 / year", image: "./Iworoko main.mp4" },
+      { name: "Divine Hostel", price: "₦170,000 / year", image: "./Iworoko main.mp4" }
     ],
     phaseTwo: [
-      { name: "Harmony Place", price: "₦220,000 / year", image: "./Images/Phase 2.mp4" },
-      { name: "Golden Homes", price: "₦240,000 / year", image: "./Images/Phase 2.mp4" }
+      { name: "Harmony Place", price: "₦220,000 / year", image: "./Phase 2.mp4" },
+      { name: "Golden Homes", price: "₦240,000 / year", image: "./Phase 2.mp4" }
     ]
   };
 
