--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 <section class="py-20 bg-white text-center">
   <div class="max-w-6xl mx-auto px-6">
     <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10" data-aos="fade-up">
-      Why Choose <span class="text-blue-600">SecureHome</span>?
+      Why Choose <span class="text-blue-600">SecureHomes</span>?
     </h2>
     <p class="text-gray-600 max-w-3xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
       We understand what students and landlords need — safety, comfort, and reliability. 
@@ -515,11 +515,14 @@
   <div class="max-w-6xl mx-auto px-4 text-center">
     <h2 class="text-3xl font-bold text-gray-800 mb-6">EKSU Campus Demo Locations</h2>
     <p class="text-gray-600 mb-8">Click on a gate to see details.</p>
-
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.7113724853893!2d5.257540075004275!3d7.714086892303818!2m3!1f0!2f0!3f0!3m
+      2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1047e2fc8f960f97%3A0x9d71f55b3e67803b!2sEkiti%20State%20University!5e0!3m2!1sen!2sng!4v1762152457420!5m2!1sen!
+      2sng" width="400" height="300" style="border:0;" 
+      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <!-- Demo Map (SVG / placeholder) -->
-    <div class="relative w-full h-96 bg-blue-100 rounded-lg shadow-lg">
+    <!-- <div class="relative w-full h-96 bg-blue-100 rounded-lg shadow-lg">
       
-      <!-- Gates as clickable points -->
+      <!-- Gates as clickable points
       <div class="absolute top-10 left-20 bg-white px-2 py-1 rounded-full shadow cursor-pointer hover:bg-blue-200" title="School Gate">
         School Gate
       </div>
@@ -540,7 +543,7 @@
         Osekita
       </div>
 
-    </div>
+    </div> -->
   </div>
 </section>
 
@@ -627,3 +630,4 @@
 
 </body>
 </html>
+
