--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
   </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-80">
 
      <!-- Navbar -->
   <nav class="flex items-center justify-between px-8 py-4 bg-white shadow">
@@ -126,7 +126,7 @@
   <div class="relative z-10 text-center px-6">
       <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
       <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
-      <button onclick="document.getElementById('loginModal').scrollIntoView({ behavior: 'smooth' });" 
+      <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });" 
          class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button> </div> 
   </section>
 
@@ -517,7 +517,7 @@
     <p class="text-gray-600 mb-8">Click on a gate to see details.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.7113724853893!2d5.257540075004275!3d7.714086892303818!2m3!1f0!2f0!3f0!3m
       2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1047e2fc8f960f97%3A0x9d71f55b3e67803b!2sEkiti%20State%20University!5e0!3m2!1sen!2sng!4v1762152457420!5m2!1sen!
-      2sng" width="full" height="400" style="border:0;" 
+      2sng" width="100%" height="500" style="border:0;" 
       allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <!-- Demo Map (SVG / placeholder) -->
     <!-- <div class="relative w-full h-96 bg-blue-100 rounded-lg shadow-lg">
@@ -556,7 +556,7 @@
     <p class="text-blue-100 mb-8" data-aos="zoom-in" data-aos-delay="100">
       Join thousands of students who trust SecureHome to connect them with safe, verified, and affordable hostels near campus.
     </p>
-    <a href="#loginModal" class="bg-white text-blue-600 font-semibold px-8 py-3 rounded-full hover:bg-blue-50 transition" data-aos="zoom-in" data-aos-delay="200">
+    <a href="#contact" class="bg-white text-blue-600 font-semibold px-8 py-3 rounded-full hover:bg-blue-50 transition" data-aos="zoom-in" data-aos-delay="200">
       Get Started
     </a>
   </div>
@@ -630,5 +630,6 @@
 
 </body>
 </html>
+
 
 
