--- a/index.html
+++ b/index.html
@@ -488,21 +488,21 @@
 
     <div class="grid md:grid-cols-3 gap-8">
       <!-- Card 1 -->
-      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl transition-all duration-300 ease-in-out bg-blue-500 hover:bg-red-500">
+      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl transition-all duration-300 ease-in-out bg-white-500 hover:bg-blue-500">
         <img src="https://i.pravatar.cc/100?img=1" alt="student1" class="w-20 h-20 rounded-full mx-auto mb-4">
         <p class="text-gray-600 mb-3 italic">"I found a secure and affordable hostel near my faculty within minutes. SecureHome made it so easy!"</p>
         <h3 class="font-semibold text-gray-800">Aisha – EKSU Student</h3>
       </div>
 
       <!-- Card 2 -->
-      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl t transition-all duration-300 ease-in-out bg-blue-500 hover:bg-red-500">
+      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl t transition-all duration-300 ease-in-out bg-white-500 hover:bg-blue-500">
         <img src="https://i.pravatar.cc/100?img=2" alt="student2" class="w-20 h-20 rounded-full mx-auto mb-4">
         <p class="text-gray-600 mb-3 italic">"The listings are real and verified. I feel safe knowing my hostel was properly checked."</p>
         <h3 class="font-semibold text-gray-800">David – EKSU Student</h3>
       </div>
 
       <!-- Card 3 -->
-      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl  transition-all duration-300 ease-in-out bg-blue-500 hover:bg-red-500">
+      <div class="bg-white p-8 rounded-2xl shadow-md hover:shadow-xl  transition-all duration-300 ease-in-out bg-white-500 hover:bg-blue-500">
         <img src="https://i.pravatar.cc/100?img=3" alt="student3" class="w-20 h-20 rounded-full mx-auto mb-4">
         <p class="text-gray-600 mb-3 italic">"I love how simple the website is! I’ll recommend SecureHome to all my friends."</p>
         <h3 class="font-semibold text-gray-800">Grace – EKSU Student</h3>
@@ -630,6 +630,7 @@
 
 </body>
 </html>
+
 
 
 
